fix: responsive layout problem

--- a/src/index.css
+++ b/src/index.css
@@ -66,12 +66,25 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  width: 100%;
+}
+
+* {
+  max-width: 100vw;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  overflow-x: clip; /* ao invés de hidden */
 }
 
 body {
